--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@capacitor/status-bar": "5.0.2",
     "@ionic/angular": "^7.0.0",
     "ionicons": "^7.0.0",
+    "moment": "^2.29.4",
     "ng2-search-filter": "^0.5.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
