ionic live-update add ... --channel-name="MeineErsteDestination" ...

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@capacitor/keyboard": "5.0.2",
     "@capacitor/status-bar": "5.0.2",
     "@ionic/angular": "^7.0.0",
+    "cordova-plugin-ionic": "5.5.3",
     "ionicons": "^7.0.0",
     "moment": "^2.29.4",
     "ng2-search-filter": "^0.5.1",
