Skript in package.json umbenannt: bump-version -> version-hochdrehen

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "KfzKennzeichen",
+  "name": "kfz-kennzeichen",
   "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
@@ -10,7 +10,7 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "ng lint",
-    "bump-version": "node VersionHochdrehen.js"
+    "version-hochdrehen": "node VersionHochdrehen.js"
   },
   "private": true,
   "dependencies": {
@@ -62,5 +62,5 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "typescript": "~5.2.2"
   },
-  "description": "An Ionic project"
+  "description": "Ionic-App zur Abfrage von Unterscheidungszeichen von dt. KFZ-Kennzeichen"
 }
